hphp/hack/test/typecheck/expression_trees_not_virtualize_functions/instance_method_error2.php
<?hh

<<file:__EnableUnstableFeatures('expression_trees')>>

function test(ExprTree<ExampleDsl, ExampleDsl::TAst, string> $y): void {
  ExampleDsl`(MyState $x) ==> {
    $z = ${ $y };
    return $x->$z;
  }`;
}

abstract class MyState {
  public function foo(ExampleInt $x): void {}
}
